--- a/Purse/Purse.csproj
+++ b/Purse/Purse.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,5 +6,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessCard\BusinessCard.csproj" />
+    <ProjectReference Include="..\Money\Money.csproj" />
+  </ItemGroup>
 
 </Project>
