--- a/Purse/Purse.csproj
+++ b/Purse/Purse.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessCard\BusinessCard.csproj" />
+    <ProjectReference Include="..\CreditCard\CreditCard.csproj" />
     <ProjectReference Include="..\Money\Money.csproj" />
   </ItemGroup>
 
